--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,9 @@ jobs:
         port: 22
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
           if [ ! -d "/docker-compose" ]; then
             sudo mkdir /docker-compose
+            sudo chown $USER:$USER /docker-compose
           fi
           cd /docker-compose
           if [ ! -f "docker-compose.yml" ]; then
