--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
     # Gradle Wrapper 스크립트 파일 (gradlew)에 실행 권한을 부여
     # gradlew wrappe 통해 빌드된거 밀고, jar 파일생성
     - name: Build Spring Project
+      env: 
+          SPRING_ACTIVE_PROFILE: prod
       run: |
         chmod +x ./gradlew
         ./gradlew wrapper 
@@ -59,5 +61,7 @@ jobs:
         script: |
           docker login --username=${{ secrets.DOCKERHUB_USERNAME }} --password=${{ secrets.DOCKERHUB_PASSWORD }}
           cd /docker-compose
+          echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}" >> .env
+          echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> .env
           sudo docker-compose up -d
 
