--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,5 +65,6 @@ jobs:
         script: |
           docker login --username=${{ secrets.DOCKERHUB_USERNAME }} --password=${{ secrets.DOCKERHUB_PASSWORD }}
           cd /docker-compose
-          sudo docker-compose up -d
+          sudo docker-compose pull
+          sudo docker-compose up -d --force-recreate
 
