--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
         script: |
           export SPRING_ACTIVE_PROFILE=prod
           # export SPRING_ACTIVE_PROFILE=${{ secrets.SPRING_ACTIVE_PROFILE }}
-          export DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}
-          export DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}
+          export SPRING_DATABASE_USERNAME=${{ secrets.SPRING_DATABASE_USERNAME }}
+          export SPRING_DATABASE_PASSWORD=${{ secrets.SPRING_DATABASE_PASSWORD }}
           export TEST_DATA=test_value
           docker login --username=${{ secrets.DOCKERHUB_USERNAME }} --password=${{ secrets.DOCKERHUB_PASSWORD }}
           cd /docker-compose
