--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,9 @@ jobs:
           # export SPRING_ACTIVE_PROFILE=${{ secrets.SPRING_ACTIVE_PROFILE }}
           # export SPRING_DATABASE_USERNAME=${{ secrets.SPRING_DATABASE_USERNAME }}
           # export SPRING_DATABASE_PASSWORD=${{ secrets.SPRING_DATABASE_PASSWORD }}
-          export aa=${{ secrets.SPRING_ACTIVE_PROFILE }}
-          export bb=${{ secrets.SPRING_DATABASE_USERNAME }}
-          export cc=${{ secrets.SPRING_DATABASE_PASSWORD }}
+          export SPRING_ACTIVE_PROFILE01=${{ secrets.SPRING_ACTIVE_PROFILE }}
+          export SPRING_DATABASE_USERNAME01=${{ secrets.SPRING_DATABASE_USERNAME }}
+          export SPRING_DATABASE_PASSWORD01=${{ secrets.SPRING_DATABASE_PASSWORD }}
           docker login --username=${{ secrets.DOCKERHUB_USERNAME }} --password=${{ secrets.DOCKERHUB_PASSWORD }}
           cd /docker-compose
           sudo docker-compose pull
