--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,14 +63,10 @@ jobs:
         port: 22
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-          # export SPRING_ACTIVE_PROFILE=prod
-          # export SPRING_ACTIVE_PROFILE=${{ secrets.SPRING_ACTIVE_PROFILE }}
-          # export SPRING_DATABASE_USERNAME=${{ secrets.SPRING_DATABASE_USERNAME }}
-          # export SPRING_DATABASE_PASSWORD=${{ secrets.SPRING_DATABASE_PASSWORD }}
-          echo "SPRING_ACTIVE_PROFILE=${{ secrets.SPRING_ACTIVE_PROFILE }}" >> .env
-          echo "SPRING_DATABASE_USERNAME=${{ secrets.SPRING_DATABASE_USERNAME }}" >> .env
-          echo "SPRING_DATABASE_PASSWORD=${{ secrets.SPRING_DATABASE_PASSWORD }}" >> .env
+          export SPRING_ACTIVE_PROFILE=${{ secrets.SPRING_ACTIVE_PROFILE }}
+          export SPRING_DATABASE_USERNAME=${{ secrets.SPRING_DATABASE_USERNAME }}
+          export SPRING_DATABASE_PASSWORD=${{ secrets.SPRING_DATABASE_PASSWORD }}
           cd /docker-compose
-          sudo docker-compose pull
-          sudo docker-compose up -d --force-recreate
+          sudo -E docker-compose pull
+          sudo -E docker-compose up -d --force-recreate
 
