--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,11 +57,17 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
+        registry: docker.io
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    # - name: Login to DockerHub
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+    #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Pull Docker Image
-      run: docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}/junmo-website-backend:latest
+    # - name: Pull Docker Image
+    #   run: docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}/junmo-website-backend:latest
 
         
     # steps:
