Feat : DB 설정 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,12 +1,17 @@
 spring:
   application:
     name: junmo-website
+#  datasource:
+#    hikari:
+#      driver-class-name: com.mysql.cj.jdbc.Driver
+#      jdbc-url: jdbc:mysql://junmo-website-db01.ct2aoqa2kuhu.ap-northeast-2.rds.amazonaws.com:3360/website?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#      username: ${SPRING_DATABASE_USERNAME}
+#      password: ${SPRING_DATABASE_PASSWORD}
   datasource:
-    hikari:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://junmo-website-db01.ct2aoqa2kuhu.ap-northeast-2.rds.amazonaws.com:3360/website?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-      username: ${SPRING_DATABASE_USERNAME}
-      password: ${SPRING_DATABASE_PASSWORD}
+    url: jdbc:mysql://junmo-website-db01.ct2aoqa2kuhu.ap-northeast-2.rds.amazonaws.com:3360/website?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${SPRING_DATABASE_USERNAME}
+    password: ${SPRING_DATABASE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
   h2:
     console:
       enabled: true
