--- a/.gitignore
+++ b/.gitignore
@@ -593,6 +593,9 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
+#.env
+.env
+
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
